--- a/www/styles.css
+++ b/www/styles.css
@@ -7,5 +7,22 @@
 }
 
 .selected {
-  background-color: #32cd32;
+  background-color: #7DDC3C;
+}
+
+dl {
+  border: 1px solid #A9A9A9;
+  width: 300px;
+}
+
+dt {
+  float: left;
+}
+
+dd {
+
+}
+
+button {
+  background-color: #A9A9A9;
 }
