--- a/www/styles.css
+++ b/www/styles.css
@@ -1,3 +1,7 @@
+/*
+ * please excuse my poor css skills
+ */
+
 .hidden {
   display: none;
 }
@@ -10,19 +14,36 @@
   background-color: #7DDC3C;
 }
 
+.no-thanks {
+  text-decoration: underline;
+  cursor: pointer;
+  font-size: 75%;
+}
+
 dl {
   border: 1px solid #A9A9A9;
-  width: 300px;
+  width: 70%;
 }
 
 dt {
   float: left;
+  padding-left: 1em;
 }
 
 dd {
-
+  text-align: right;
+  padding-right: 1em;
 }
 
 button {
   background-color: #A9A9A9;
+  cursor: pointer;
+}
+
+body {
+  margin: 0 auto;
+  padding-top: 20%;
+  width: 70%;
+  font-family: "Helvetica", "Arial", sans-serif;
+  color: #555;
 }
